# spraakbanken-swegov-opendata-crawler

./: .gitignore  Cargo.toml  README.md
src/: configuration.rs  crawler.rs  error.rs  main.rs
src/spiders/: mod.rs  sfs.rs
