[package]
name = "fetch-sfs"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.71"
reqwest = { version = "0.11.17", features = ["rustls", "json", "rustls-tls", "brotli", "gzip"], default-features = false }
tokio = { version = "1.28.0", features = ["macros", "rt-multi-thread"] }
