[package]
name = "fetch-sfs"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.71"
async-trait = "0.1.68"
futures = "0.3.28"
reqwest = { version = "0.11.17", features = ["rustls", "json", "rustls-tls", "brotli", "gzip"], default-features = false }
serde = { version = "1.0.160", features = ["derive"] }
tokio = { version = "1.28.0", features = ["macros", "rt-multi-thread"] }
tokio-stream = "0.1.14"
tracing = "0.1.37"
tracing-subscriber = { version = "0.3.17", features = ["env-filter"] }
